Adapt to work both on Windows and Linux/onyxia

--- a/replication_report/04_data_preparation.qmd
+++ b/replication_report/04_data_preparation.qmd
@@ -107,17 +107,28 @@ library(aws.s3)
 library(purrr)
 library(stringr)
 
-save_object(
-  file = "other.zip",
-  object = "Replication_wolf/other2.zip",
-  bucket = "fbedecarrats",
-  region = "")
+if (Sys.info()["sysname"] == "Windows") {
+  source("secrets_aws.R")
+}
+
+# save_object(
+#   file = "other.zip",
+#   object = "Replication_wolf/other2.zip",
+#   bucket = "fbedecarrats",
+#   region = "")
 
 # Securely getting the data from the S3 bucket (private and encrypted)
-system("vault kv get -format=table onyxia-kv/fbedecarrats/species_info", 
-       intern = TRUE) %>%
-  pluck(17) %>%
-  str_extract("[:alnum:]*$") -> my_key
+
+# If running on SSP Cloud, getting the key from vault
+if (Sys.info()["effective_user"] == "onyxia") {
+  system("vault kv get -format=table onyxia-kv/fbedecarrats/species_info", 
+         intern = TRUE) %>%
+    pluck(17) %>%
+    str_extract("[:alnum:]*$") -> my_key
+} else {
+ my_key <- readLines("secret_zip_key")
+}
+
 system(paste("unzip -P", my_key, "other.zip"))
 file.remove("other.zip")
 
