--- a/replication_report/03_computing_setup.qmd
+++ b/replication_report/03_computing_setup.qmd
@@ -72,6 +72,7 @@ required_packages <- c( # List all required R packages
   "reticulate", # To interact with python (normally installed with Quarto)
   "JuliaCall", # To interact with Julia 
   "tidyverse", # To facilitate data manipulation
+  "aws.s3", # to interact with S3
   # All packages below are used in Wolf and al. code files:
   "countrycode",
   "cowplot",
@@ -131,8 +132,8 @@ if(any(missing)) install.packages(required_packages[missing],
 library(reticulate) # to run python from R
 
 # Variables to modify
-my_envname <- "replication-wolf"
-scripts_to_run <- "003" # or c("001", "003") or "001"
+my_envname <- "replication-wolf4"
+scripts_to_run <- c("003") # or c("001", "003") or "001"
 
 # Install python if not already present
 if (!dir.exists(miniconda_path())) {
@@ -145,8 +146,7 @@ if (!my_envname %in% conda_list()$name) {
 # Packages needed for each script
 requirements <- list(
   "001" = c("earthengine-api", "rasterio", "pandas", "pydrive"),
-  "003" = c("fiona", "rasterio", "ray-default", "dbfread", "pandas"))
-addition <- c()
+  "003" = c("fiona", "rasterio", "ray", "dbfread", "pandas"))
 # Combined depending on the variable defined at beginning of code chunk
 required <- unique(unlist(requirements[scripts_to_run]))
 # identify which ones are missing
@@ -155,15 +155,17 @@ missing_packages <- required[!required %in% py_installed_packages]
 # Install those
 if (length(missing_packages) > 0) {
   conda_install(envname = my_envname, 
-              packages = missing_packages)
+              packages = missing_packages,
+              pip = TRUE)
 }
 
 # Adding a dependency required on linux platforms
-if ((Sys.info()["sysname"] == "Linux") &
-    (!"libstdcxx-ng" %in% py_installed_packages)) {
+ if ((Sys.info()["sysname"] == "Linux") &
+ (!"libstdcxx-ng" %in% py_installed_packages)) {
   conda_install(envname = my_envname,
               packages = "libstdcxx-ng")
-}
+  } 
+    
 
 # Activate the corresponding environment
 use_condaenv(my_envname)
