--- a/replication_report/05_reproduction_as_is.qmd
+++ b/replication_report/05_reproduction_as_is.qmd
@@ -8,6 +8,12 @@ editor_options:
 
 We want to make all code modifications transparent, so we download a clean version of Wolf et al. source code.
 
+```{bash}
+conda create --name replication-wolf --file replication_report/requirements.txt
+conda activate replication-wolf
+```
+
+
 ```{r}
 # Not a good practice, only for debugging
 # setwd("replication_report")
@@ -285,6 +291,9 @@ Run the file
 
 ```{r}
 library(reticulate)
+my_envname <- "replication-wolf4"
+use_condaenv(my_envname)
+species_richness_script <- "PA_matching_asis/003 - species_richness.py"
 source_python(species_richness_script)
 ```
 
